[gd_scene load_steps=2 format=3 uid="uid://wavelet_main"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode=3
anchors_preset=15
anchor_right=1.0
anchor_bottom=1.0
grow_horizontal=2
grow_vertical=2

[node name="Background" type="ColorRect" parent="."]
layout_mode=1
anchors_preset=15
anchor_right=1.0
anchor_bottom=1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode=1
anchors_preset=15
anchor_right=1.0
anchor_bottom=1.0
offset_left=20.0
offset_top=20.0
offset_right=-20.0
offset_bottom=-20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode=2
text = "WAVELET"
horizontal_alignment=1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode=2
text = "Abstract Sound Synthesizer"
horizontal_alignment=1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode=2

[node name="Controls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode=2

[node name="VolumeLabel" type="Label" parent="VBoxContainer/Controls"]
layout_mode=2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/Controls"]
layout_mode=2
size_flags_horizontal=3
min_value=0.0
max_value=1.0
step=0.01
value=0.7

[node name="FilterLabel" type="Label" parent="VBoxContainer"]
layout_mode=2
text = "Filter Cutoff:"

[node name="FilterSlider" type="HSlider" parent="VBoxContainer"]
layout_mode=2
min_value=20.0
max_value=10000.0
step=10.0
value=2000.0

[node name="ResonanceLabel" type="Label" parent="VBoxContainer"]
layout_mode=2
text = "Resonance:"

[node name="ResonanceSlider" type="HSlider" parent="VBoxContainer"]
layout_mode=2
min_value=0.1
max_value=10.0
step=0.1
value=1.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode=2

[node name="PresetsLabel" type="Label" parent="VBoxContainer"]
layout_mode=2
text = "Presets:"

[node name="PresetsGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode=2
columns=4

[node name="PresetInit" type="Button" parent="VBoxContainer/PresetsGrid"]
layout_mode=2
text = "Init"

[node name="PresetBass" type="Button" parent="VBoxContainer/PresetsGrid"]
layout_mode=2
text = "Bass"

[node name="PresetPad" type="Button" parent="VBoxContainer/PresetsGrid"]
layout_mode=2
text = "Pad"

[node name="PresetLead" type="Button" parent="VBoxContainer/PresetsGrid"]
layout_mode=2
text = "Lead"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode=2

[node name="HelpLabel" type="Label" parent="VBoxContainer"]
layout_mode=2
text = "Keyboard Controls:
A-G: Play notes (white keys)
W-E-T-Y-U-O-P: Black keys
Space: Sustain pedal"
autowrap_mode=2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
